--- a/go-dev/Dockerfile
+++ b/go-dev/Dockerfile
@@ -7,5 +7,5 @@ RUN apt-get update && apt-get install -yq curl build-essential
 # Install Go
 RUN curl -s https://go.googlecode.com/files/go1.2.src.tar.gz | tar -v -C /usr/local -xz
 ENV PATH /usr/local/go/bin:$PATH
-ENV GOPATH /go:/go/src/github.com/dotcloud/docker/vendor
+ENV GOPATH /go
 RUN cd /usr/local/go/src && ./make.bash --no-clean 2>&1
