Update mitmproxy image to use debian

--- a/mitmproxy/Dockerfile
+++ b/mitmproxy/Dockerfile
@@ -1,10 +1,8 @@
-FROM ubuntu:precise
+FROM stackbrew/debian:7.2
 
 MAINTAINER Fabio Falci "fabiofalci@gmail.com"
 
-RUN echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt precise main universe multiverse' > /etc/apt/sources.list && apt-get update
-
-RUN apt-get install -y vim build-essential python-pip python-dev libxml2-dev libxslt-dev
+RUN apt-get update && apt-get -y install libffi-dev python-dev python-pip libxml2-dev libxslt-dev
 RUN pip install mitmproxy
 
 RUN echo 'LANG=en_US.UTF-8' > /etc/locale.conf && echo 'export LANG="en_US.UTF-8"' >> /etc/profile
