Script to run mitmproxy on port 3128

--- a/mitmproxy/Dockerfile
+++ b/mitmproxy/Dockerfile
@@ -6,3 +6,4 @@ RUN apt-get update && apt-get -y install libffi-dev python-dev python-pip libxml
 RUN pip install mitmproxy
 
 RUN echo 'LANG=en_US.UTF-8' > /etc/locale.conf && echo 'export LANG="en_US.UTF-8"' >> /etc/profile
+RUN echo 'source /etc/profile\nmitmproxy -p 3128' > /start.sh && chmod +x /start.sh
