Add new line to generated files

--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -7,13 +7,13 @@ RUN echo "export JAVA_HOME=/usr/lib/jvm/default" >> /etc/profile.d/java.sh \
 	&& echo "export HADOOP_PREFIX=/usr/lib/hadoop" >> /etc/profile.d/hadoop.sh
 
 RUN /usr/bin/ssh-keygen -A \
-	&& sed 's@session\s*include\s*system-remote-login@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd 
+	&& sed 's@session\s*include\s*system-remote-login@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
 # Pseudo-Distributed Operation
-RUN echo "<configuration><property><name>fs.defaultFS</name><value>hdfs://localhost:9000</value></property></configuration>" > /etc/hadoop/core-site.xml \
-	&& echo "<configuration><property><name>dfs.replication</name><value>1</value></property></configuration>" > /etc/hadoop/hdfs-site.xml \
-	&& echo "<configuration><property><name>mapreduce.framework.name</name><value>yarn</value></property></configuration>" > /etc/hadoop/mapred-site.xml \
-	&& echo "<configuration><property><name>yarn.nodemanager.aux-services</name><value>mapreduce_shuffle</value></property></configuration>" > /etc/hadoop/yarn-site.xml
+RUN echo -e "<configuration>\n<property>\n<name>fs.defaultFS</name>\n<value>hdfs://localhost:9000</value>\n</property>\n</configuration>" > /etc/hadoop/core-site.xml \
+	&& echo -e "<configuration>\n<property>\n<name>dfs.replication</name>\n<value>1</value>\n</property>\n</configuration>" > /etc/hadoop/hdfs-site.xml \
+	&& echo -e "<configuration>\n<property>\n<name>mapreduce.framework.name</name>\n<value>yarn</value>\n</property>\n</configuration>" > /etc/hadoop/mapred-site.xml \
+	&& echo -e "<configuration>\n<property>\n<name>yarn.nodemanager.aux-services</name>\n<value>mapreduce_shuffle</value>\n</property>\n</configuration>" > /etc/hadoop/yarn-site.xml
 
 RUN echo "\$HADOOP_PREFIX/bin/hdfs namenode -format" >> /start.sh \
 	&& echo "\$HADOOP_PREFIX/sbin/hadoop-daemon.sh start namenode" >> /start.sh \
