--- a/go-dev/Dockerfile
+++ b/go-dev/Dockerfile
@@ -1,11 +1,7 @@
-FROM ubuntu
+FROM base/archlinux
 
-RUN echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt precise main universe multiverse' > /etc/apt/sources.list
+RUN pacman -Syu --noconfirm
+RUN pacman -S go mercurial git --noconfirm
 
-RUN apt-get update && apt-get install -yq curl build-essential
-
-# Install Go
-RUN curl -s https://go.googlecode.com/files/go1.2.src.tar.gz | tar -v -C /usr/local -xz
-ENV PATH /usr/local/go/bin:$PATH
 ENV GOPATH /go
-RUN cd /usr/local/go/src && ./make.bash --no-clean 2>&1
+ENV PATH $PATH:/go/bin
