Nginx script to run as daemon or not

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,5 +3,6 @@ FROM base/archlinux
 RUN pacman -Syu --noconfirm
 RUN pacman -S nginx --noconfirm
 
-RUN echo "/usr/bin/nginx -g 'pid /run/nginx.pid; error_log stderr;'" > /start.sh \
-	&& chmod +x /start.sh
+RUN echo "/usr/bin/nginx -g 'pid /run/nginx.pid; error_log stderr;'" > /start-daemon.sh \
+	&& echo "/usr/bin/nginx -g 'pid /run/nginx.pid; error_log stderr; daemon off;'" > /start.sh \
+	&& chmod +x /start*.sh
