--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -1,6 +1,10 @@
 FROM base/archlinux
 
-RUN pacman -Syu --noconfirm
+RUN pacman -Sy --noconfirm \
+	&& pacman -S reflector --noconfirm \
+	&& reflector --verbose -l 5 --sort rate --save /etc/pacman.d/mirrorlist	\
+	&& pacman -Su --noconfirm
+	
 RUN pacman -S sudo postgresql --noconfirm
 RUN sudo -u postgres initdb --locale en_US.UTF-8 -E UTF8 -D '/var/lib/postgres/data'
 
