--- a/mitmproxy/Dockerfile
+++ b/mitmproxy/Dockerfile
@@ -1,5 +1,7 @@
 FROM archlinux-aur
 
-RUN pacman -Syu --noconfirm
+RUN pacman -Syu --noconfirm \
+	&& pacman-db-upgrade
+	
 RUN yaourt -S mitmproxy --noconfirm
 
