Flag asroot removed from makepkg

--- a/archlinux-aur/Dockerfile
+++ b/archlinux-aur/Dockerfile
@@ -4,23 +4,25 @@ RUN pacman -Sy --noconfirm \
 	&& pacman -S reflector --noconfirm \
 	&& reflector --verbose -l 5 --sort rate --save /etc/pacman.d/mirrorlist	\
 	&& pacman -Su --noconfirm \
-	&& pacman -S base-devel --noconfirm \
-	&& pacman-db-upgrade
+	&& pacman-db-upgrade \
+	&& pacman -S base-devel --noconfirm
 
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 
-RUN cd /tmp \
-	&& curl https://aur.archlinux.org/packages/pa/package-query/package-query.tar.gz -0 | tar -zx \
+RUN useradd -r -s /usr/bin/nologin pacman \
+	&& echo 'pacman ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \
+	&& cd /tmp \
+	&& sudo -u pacman bash -c 'curl https://aur.archlinux.org/packages/pa/package-query/package-query.tar.gz -0 | tar -zx' \
 	&& cd package-query \
-	&& makepkg -s --asroot  --noconfirm \
+	&& sudo -u pacman makepkg -s --noconfirm \
 	&& pacman -U package-query-*.pkg.tar.xz --noconfirm \
 	&& rm -rf /tmp/package-query \
 	&& cd /tmp \
-	&& curl https://aur.archlinux.org/packages/ya/yaourt/yaourt.tar.gz -0 | tar -zx \
+	&& sudo -u pacman bash -c 'curl https://aur.archlinux.org/packages/ya/yaourt/yaourt.tar.gz -0 | tar -zx' \
 	&& cd yaourt \
-	&& makepkg -s --asroot  --noconfirm \
+	&& sudo -u pacman makepkg -s --noconfirm \
 	&& pacman -U yaourt-*.pkg.tar.xz --noconfirm \
 	&& rm -rf /tmp/yaourt
 
